updating the structure

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<section id="pizzaMenu" class="pizza-menu">
 		<!-- Example Pizza Item -->
 		<div class="pizza-item" data-name="Margherita" data-type="veg" data-price="8">
-			<img src="pizza-1.jpeg" alt="Margherita">
+			<img src="assets/pizza-1.jpeg" alt="Margherita">
 			<div class="pizza-info">
 				<h3>Margherita</h3>
 				<p>Classic cheese and tomato pizza</p>
@@ -58,7 +58,7 @@
 		</div>
 
 		<div class="pizza-item" data-name="Margherita" data-type="veg" data-price="8">
-			<img src="pizza-2.jpeg" alt="Margherita">
+			<img src="assets/pizza-2.jpeg" alt="Margherita">
 			<div class="pizza-info">
 				<h3>Margherita</h3>
 				<p>Classic cheese and tomato pizza</p>
@@ -68,7 +68,7 @@
 		</div>
 
 		<div class="pizza-item" data-name="Margherita" data-type="veg" data-price="8">
-			<img src="pizza-3.jpeg" alt="Margherita">
+			<img src="assets/pizza-3.jpeg" alt="Margherita">
 			<div class="pizza-info">
 				<h3>Margherita</h3>
 				<p>Classic cheese and tomato pizza</p>
@@ -78,7 +78,7 @@
 		</div>
 
 		<div class="pizza-item" data-name="Margherita" data-type="veg" data-price="8">
-			<img src="pizza-4.jpeg" alt="Margherita">
+			<img src="assets/pizza-4.jpeg" alt="Margherita">
 			<div class="pizza-info">
 				<h3>Margherita</h3>
 				<p>Classic cheese and tomato pizza</p>
@@ -88,7 +88,7 @@
 		</div>
 
 		<div class="pizza-item" data-name="Margherita" data-type="veg" data-price="8">
-			<img src="pizza-5.jpeg" alt="Margherita">
+			<img src="assets/pizza-5.jpeg" alt="Margherita">
 			<div class="pizza-info">
 				<h3>Margherita</h3>
 				<p>Classic cheese and tomato pizza</p>
@@ -98,7 +98,7 @@
 		</div>
 
 		<div class="pizza-item" data-name="Margherita" data-type="veg" data-price="8">
-			<img src="pizza-6.jpeg" alt="Margherita">
+			<img src="assets/pizza-6.jpeg" alt="Margherita">
 			<div class="pizza-info">
 				<h3>Margherita</h3>
 				<p>Classic cheese and tomato pizza</p>
@@ -108,7 +108,7 @@
 		</div>
 
 		<div class="pizza-item" data-name="Margherita" data-type="veg" data-price="8">
-			<img src="pizza-7.jpeg" alt="Margherita">
+			<img src="assets/pizza-7.jpeg" alt="Margherita">
 			<div class="pizza-info">
 				<h3>Margherita</h3>
 				<p>Classic cheese and tomato pizza</p>
@@ -119,7 +119,7 @@
 
 		<!-- Example: Pepperoni -->
 		<div class="pizza-item" data-name="Pepperoni" data-type="non-veg" data-price="10">
-			<img src="pizza-8.jpeg" alt="Pepperoni">
+			<img src="assets/pizza-8.jpeg" alt="Pepperoni">
 			<div class="pizza-info">
 				<h3>Pepperoni</h3>
 				<p>Cheese, tomato, and pepperoni</p>
