adding one item

--- a/index.html
+++ b/index.html
@@ -127,6 +127,26 @@
 				<button class="add-cart">Add to Cart</button>
 			</div>
 		</div>
+
+		<div class="pizza-item" data-name="Margherita" data-type="veg" data-price="8">
+			<img src="assets/pizza-9.jpeg" alt="Margherita">
+			<div class="pizza-info">
+				<h3>Margherita</h3>
+				<p>Classic cheese and tomato pizza</p>
+				<p class="price">$8</p>
+				<button class="add-cart">Add to Cart</button>
+			</div>
+		</div>
+
+		<div class="pizza-item" data-name="Margherita" data-type="veg" data-price="8">
+			<img src="assets/pizza-10.jpeg" alt="Margherita">
+			<div class="pizza-info">
+				<h3>Margherita</h3>
+				<p>Classic cheese and tomato pizza</p>
+				<p class="price">$8</p>
+				<button class="add-cart">Add to Cart</button>
+			</div>
+		</div>
 	</section>
 
 	<!-- Cart Section -->
